creado modelos, views solo falta concectar y logica

--- a/Montalvo_ExamenP2.csproj
+++ b/Montalvo_ExamenP2.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="Views\AllNotesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Hm_InputPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
